DevTools: fix FrameResource.lastModified to be optional when not present

This patch fixes FrameResource.lastModified to be optional when not
returned by server.

BUG=696358

Review-Url: https://codereview.chromium.org/2727393002
Cr-Commit-Position: refs/heads/master@{#454516}

Former-commit-id: 22e8735948a7c60d393250be79c9959d218faafe